<resources>
    <string name="app_name">English Idioms</string>
    <string name="app_name_splash_screen">English Idioms Splash Screen</string>
    <string name="email_feedback_text">Hi!<BR> </BR>I tried your application and I want to say to you:<BR> </BR></string>
    <string name="email_invite_friends_text">Hi! I tried English Idioms… It\'s a very cool application! I really suggest to you to try it! Come on, go to the Google Play Store!</string>
    <string name="email_not_sent">Impossible to send the email!</string>
    <string name="email_sent">The e-mail was sent!</string>
    <string name="email_subject_feedback">English Idioms Feedback</string>
    <string name="email_subject_invite_friends">Try English Idioms! It\'s awesome!</string>
    <string name="english_flag">United Kingdom Flag</string>
    <string name="english_language_set">Engish language successfully set!</string>
    <string name="french_flag">French flag</string>
    <string name="game_over_congratulation">Congratulation, you did it!</string>
    <string name="game_over_feedback">Give me a feedback!</string>
    <string name="game_over_text1">I hope that you enjoy my game and it was useful for you!</string>
    <string name="game_over_text2">If you want to send me an e-mail for saying to me what you like and what you think that could be better I really appreciate it! You can do that clicking on the following botton!</string>
    <string name="game_over_text3">Thanks for playing!</string>
    <string name="german_flag">German flag</string>
    <string name="go_back_to_menu">Go back to menu</string>
    <string name="italian_flag">Italian flag</string>
    <string name="italian_language_set">Italian language successfully set!</string>
    <string name="language_not_yet_available">Unfortunately this language is not yet completely available! :(</string>
    <string name="locale_lang">MyLanguage</string>
    <string name="long_example_text">Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here Put explanation here</string>
    <string name="next">Next</string>
    <string name="rebus_hint">Rebus Hint</string>
    <string name="rebus_number">Rebus Number</string>
    <string name="rebus_picture">Rebus picture</string>
    <string name="settings">Settings</string>
    <string name="spanish_flag">Spanish flag</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="tell_to_a_friend">Tell to a friend</string>
    <string name="translation_example">Translation here!</string>
    <string name="wrong_answer">Wrong answer! Think about it!</string>
    <string name="my_mail">luca.mannella@studenti.polito.it</string>
</resources>
