<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lucamannella.englishidioms.GameOverActivity" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        android:text="@string/game_over_congratulation"
        style="@style/TextViews" />

    <TextView android:id="@+id/center_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/game_over_text2"
        android:textColor="#00796b"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/center_text_view"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/game_over_text1"
        android:textColor="#00796b"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/center_text_view"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/game_over_text3"
        android:textSize="16sp"
        style="@style/TextViews" />

    <View android:id="@+id/center_bar"
        android:layout_width="1dp"
        android:layout_height="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@id/center_bar"
        android:layout_marginRight="8dp"
        android:layout_alignEnd="@id/center_bar"
        android:layout_marginEnd="8dp"
        android:text="@string/game_over_feedback"
        android:onClick="mailMe"
        style="@style/Buttons" />
    <!-- AlignEnd and marginEnd were added to suppress a warning -->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@id/center_bar"
        android:layout_alignStart="@id/center_bar"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/go_back_to_menu"
        android:onClick="goBackToMenu"
        style="@style/Buttons" />

</RelativeLayout>
